--- a/_config.yml
+++ b/_config.yml
@@ -62,10 +62,10 @@ gitalk_distraction_mode: false
 # -----------THEME SETTINGS--------------#
 #========================================#
 
-nav-color: "#00334e"                                 # options: light, dark, transparent, primary, custom | Change the color of the navbar
-footer-color: "#00334e"
-color-scheme: "#00334e"                              # options: demo | changes color scheme based on preset values 
-card-color: "#00334e"                                # Used on cards like the home highlights section
+nav-color: "#304C89"                                 # options: light, dark, transparent, primary, custom | Change the color of the navbar
+footer-color: "#304C89"
+color-scheme: "#304C89"                              # options: demo | changes color scheme based on preset values 
+card-color: "#304C89"                                # Used on cards like the home highlights section
 nav-dIcon: "fas fa-caret-down"                       # Change the navbar dropdown (for mobile or small screen sizes) to any fontawesome icon. for a list of icons visit https://fontawesome.com/ 
 animate: true                                        # false or true, uses animate.css to animate certain functions
 
