--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: aagam2@illinois.edu
 description: # a minimalistic jekyll theme for academics
 baseurl:                                       # the subpath of your site, e.g. /blog
 url: "https://aagamrshah.github.io/"          # the base hostname & protocol for your site, e.g. http://example.com
-image: /assets/img/homepage.png               # used to generate site link preview
+image:           # used to generate site link preview
 image_alt: # A minimalistic jekyll theme for academic    # image description
 google-tag: G-B0CD0C5TDR
 
