--- a/_data/bib.yml
+++ b/_data/bib.yml
@@ -19,3 +19,11 @@
   doi: 10.1021/acsanm.0c02018
   URL: https://doi.org/10.1021/acsanm.0c02018
 
+- id: shah2024
+  author: <b>Shah, Aagam </b>, Weissbach, Reimar, Griggs, David A., Hart, A. John, Ertekin, Elif and Tawfick, Sameh
+  title: "Automated Segmentation of Microscopy Images of Laser Powder Bed Fusion Melt Tracks"
+  journal: (under review)
+  volume: 
+  number: 
+  pages: 
+  year: 2024
